--- a/a/s2025781117.html
+++ b/a/s2025781117.html
@@ -104,6 +104,7 @@
 		<meta name="DC.subject" content="Hybrid Renewable Energy Systems; Solar PV; Wind Energy; Battery Energy Storage; Community Microgrids; Sustainable Energy; Energy Management; Renewable Integration; Decentralized Power Systems">
 		<meta name="DC.identifier" content="s2025781117">
 		<meta name="DC.type" content="Text.Serial.Journal">
+		<meta name="DC.relation" content="IsArchivedAt https://doi.org/10.5281/zenodo.18539543">
 		<meta property="og:type" content="article">
 		<meta property="og:title" content="Design and Performance Evaluation of Hybrid Solar-Wind Energy Systems with Battery Storage for Sustainable Community Power Supply">
 		<meta property="og:url" content="https://solav.me/a/s2025781117">
@@ -112,7 +113,7 @@
 		<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 		<link href="/css/swiper.css" rel="stylesheet">
-		<link href="/css/style.css?20260209" rel="stylesheet">
+		<link href="/css/style.css?20260209.1" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RE3FS524EK"></script>
 		<script>
@@ -177,7 +178,7 @@
 										<div class="d-lg-flex pt-lg-1">
 											<div class="mega-dropdown-column px-0">
 												<ul class="list-unstyled mb-3">
-													<li><a href="/archive" class="dropdown-item">Volume 2(2026)</a></li>
+													<li><a href="/archive" class="dropdown-item active">Volume 2(2026)</a></li>
 													<li><hr class="dropdown-divider"></li>
 													<li><a href="/authors" class="dropdown-item">Authors</a></li>
 												</ul>
@@ -186,7 +187,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item active">Voulme 1(2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Voulme 1(2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -239,7 +240,7 @@
 				</div>
 			</div>
 			<div class="container pb-2 pb-lg-3 pt-0" id="articleContainer">
-				<a href="/archive2025" class="btn btn-sm btn-secondary mb-1">
+				<a href="/archive" class="btn btn-sm btn-secondary mb-1">
 					<i class="bi bi-arrow-left me-1"></i> Browse All Articles
 				</a><hr class="m-0 mb-3 p-0">
 				<div class="row">
@@ -306,6 +307,10 @@
 										<button id="citeBtn" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#citationModal">
 											<i class="bi bi-quote me-1"></i> Cite This Article
 										</button>
+										<small class="text-muted text-xs mt-2"><i class="bi bi-info-circle"></i> This DOI is provided for long-term preservation and open archiving.</small>
+										<a href="https://doi.org/10.5281/zenodo.18539543" target="_blank" class="btn btn-sm btn-outline-primary"  style="white-space: normal;">
+											<img src="/images/doi_logo.svg" class="doiIcon mx-2" alt="(Zenodo)"> Archival DOI (Zenodo)
+										</a>
 									</div>
 								</div>
 							</div>
@@ -521,7 +526,9 @@
 						<div class="mb-3">
 							<label class="form-label">APA Format</label>
 							<div id="apaCitation" class="citation-box border border-opacity-10">
-																Samara, Daud 1(2025). Design and Performance Evaluation of Hybrid Solar-Wind Energy Systems with Battery Storage for Sustainable Community Power Supply. SOLAV Journal, 74-91. https://solav.me/a/s2025781117							</div>
+								
+								Samara, Daud 1(2025). Design and Performance Evaluation of Hybrid Solar-Wind Energy Systems with Battery Storage for Sustainable Community Power Supply. SOLAV Journal, 74-91. https://solav.me/a/s2025781117
+							</div>
 						</div>
 					</div>
 					<div class="modal-footer">
