--- a/a/s2026781201.html
+++ b/a/s2026781201.html
@@ -77,6 +77,7 @@
 		<meta name="DC.subject" content="Scholarly Publishing; Open Access; Continuous Publication; Peer Review; Research Integrity; Interdisciplinary Research; Academic Communication; Call for Papers">
 		<meta name="DC.identifier" content="s2026781201">
 		<meta name="DC.type" content="Text.Serial.Journal">
+		<meta name="DC.relation" content="IsArchivedAt https://doi.org/10.5281/zenodo.18539901">
 		<meta property="og:type" content="article">
 		<meta property="og:title" content="Advancing Open, Ethical, and Interdisciplinary Scholarship: Reflections on Volume One and a Call for Contributions to Volume Two (2026)">
 		<meta property="og:url" content="https://solav.me/a/s2026781201">
@@ -85,7 +86,7 @@
 		<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 		<link href="/css/swiper.css" rel="stylesheet">
-		<link href="/css/style.css?20260209" rel="stylesheet">
+		<link href="/css/style.css?20260209.1" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RE3FS524EK"></script>
 		<script>
@@ -147,8 +148,8 @@
 								<li class="nav-item dropdown">
 									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-expanded="true">Archive</a>
 									<div class="dropdown-menu" data-bs-popper="static">
-										<div class="d-lg-flex pt-lg-3">
-											<div class="mega-dropdown-column">
+										<div class="d-lg-flex pt-lg-1">
+											<div class="mega-dropdown-column px-0">
 												<ul class="list-unstyled mb-3">
 													<li><a href="/archive" class="dropdown-item active">Volume 2(2026)</a></li>
 													<li><hr class="dropdown-divider"></li>
@@ -156,10 +157,12 @@
 												</ul>
 											</div>
 											<div class="mega-dropdown-column">
-												<h6 class="px-3 mb-2">Older Archives</h6>
-												<ul class="list-unstyled mb-3">
-													<li><a href="/archive2025" class="dropdown-item">Voulme 1(2025)</a></li>
-												</ul>
+												<div class="card ms-2 h-100 dropdown-menuAnimated">
+													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
+													<ul class="list-unstyled mb-3">
+														<li><a href="/archive2025" class="dropdown-item">Voulme 1(2025)</a></li>
+													</ul>													
+												</div>
 											</div>
 										</div>
 									</div>
@@ -276,6 +279,10 @@
 										<button id="citeBtn" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#citationModal">
 											<i class="bi bi-quote me-1"></i> Cite This Article
 										</button>
+										<small class="text-muted text-xs mt-2"><i class="bi bi-info-circle"></i> This DOI is provided for long-term preservation and open archiving.</small>
+										<a href="https://doi.org/10.5281/zenodo.18539901" target="_blank" class="btn btn-sm btn-outline-primary"  style="white-space: normal;">
+											<img src="/images/doi_logo.svg" class="doiIcon mx-2" alt="(Zenodo)"> Archival DOI (Zenodo)
+										</a>
 									</div>
 								</div>
 							</div>
@@ -491,6 +498,7 @@
 						<div class="mb-3">
 							<label class="form-label">APA Format</label>
 							<div id="apaCitation" class="citation-box border border-opacity-10">
+								
 								Baker, Maher Asaad 2(2026). Advancing Open, Ethical, and Interdisciplinary Scholarship: Reflections on Volume One and a Call for Contributions to Volume Two (2026). SOLAV Journal, 1-6. https://solav.me/a/s2026781201
 							</div>
 						</div>
