--- a/a/s2026781202.html
+++ b/a/s2026781202.html
@@ -89,6 +89,7 @@
 		<meta name="DC.subject" content="Responsible Artificial Intelligence; Sustainable Technologies; Ethical Computing; Environmental Monitoring; Energy Systems; AI Governance; Open Science; Interdisciplinary Research">
 		<meta name="DC.identifier" content="s2026781202">
 		<meta name="DC.type" content="Text.Serial.Journal">
+		<meta name="DC.relation" content="IsArchivedAt https://doi.org/10.5281/zenodo.18540225">
 		<meta property="og:type" content="article">
 		<meta property="og:title" content="Responsible Artificial Intelligence and Sustainable Technologies: Emerging Research Frontiers">
 		<meta property="og:url" content="https://solav.me/a/s2026781202">
@@ -97,7 +98,7 @@
 		<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 		<link href="/css/swiper.css" rel="stylesheet">
-		<link href="/css/style.css?20260209" rel="stylesheet">
+		<link href="/css/style.css?20260209.1" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RE3FS524EK"></script>
 		<script>
@@ -157,7 +158,7 @@
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link dropdown-toggl active" data-bs-toggle="dropdown" aria-expanded="true">Archive</a>
+									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-expanded="true">Archive</a>
 									<div class="dropdown-menu" data-bs-popper="static">
 										<div class="d-lg-flex pt-lg-1">
 											<div class="mega-dropdown-column px-0">
@@ -290,6 +291,10 @@
 										<button id="citeBtn" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#citationModal">
 											<i class="bi bi-quote me-1"></i> Cite This Article
 										</button>
+										<small class="text-muted text-xs mt-2"><i class="bi bi-info-circle"></i> This DOI is provided for long-term preservation and open archiving.</small>
+										<a href="https://doi.org/10.5281/zenodo.18540225" target="_blank" class="btn btn-sm btn-outline-primary"  style="white-space: normal;">
+											<img src="/images/doi_logo.svg" class="doiIcon mx-2" alt="(Zenodo)"> Archival DOI (Zenodo)
+										</a>
 									</div>
 								</div>
 							</div>
@@ -505,6 +510,7 @@
 						<div class="mb-3">
 							<label class="form-label">APA Format</label>
 							<div id="apaCitation" class="citation-box border border-opacity-10">
+								
 								Baker, Maher Asaad 2(2026). Responsible Artificial Intelligence and Sustainable Technologies: Emerging Research Frontiers. SOLAV Journal, 7-12. https://solav.me/a/s2026781202
 							</div>
 						</div>
