--- a/a/s2025781102.html
+++ b/a/s2025781102.html
@@ -73,6 +73,7 @@
 		<meta name="DC.subject" content="Editorial Governance; Double Blind Peer Review; Research Integrity; Publication Ethics; Open Access Policy; Scholarly Accountability">
 		<meta name="DC.identifier" content="s2025781102">
 		<meta name="DC.type" content="Text.Serial.Journal">
+		<meta name="DC.relation" content="IsArchivedAt https://doi.org/10.5281/zenodo.18538363">
 		<meta property="og:type" content="article">
 		<meta property="og:title" content="Editorial Policies, Peer Review, and Ethical Standards of SOLAV Journal">
 		<meta property="og:url" content="https://solav.me/a/s2025781102">
@@ -81,7 +82,7 @@
 		<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 		<link href="/css/swiper.css" rel="stylesheet">
-		<link href="/css/style.css?20260209" rel="stylesheet">
+		<link href="/css/style.css?20260209.1" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RE3FS524EK"></script>
 		<script>
@@ -92,7 +93,7 @@
 		gtag('config', 'G-RE3FS524EK');
 		!function(){const e=localStorage.getItem("theme"),t=window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light",a=e||t;document.documentElement.setAttribute("data-bs-theme",a)}();
 		</script>
-		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		<script type="application/ld+json">
@@ -146,7 +147,7 @@
 										<div class="d-lg-flex pt-lg-1">
 											<div class="mega-dropdown-column px-0">
 												<ul class="list-unstyled mb-3">
-													<li><a href="/archive" class="dropdown-item">Volume 2(2026)</a></li>
+													<li><a href="/archive" class="dropdown-item active">Volume 2(2026)</a></li>
 													<li><hr class="dropdown-divider"></li>
 													<li><a href="/authors" class="dropdown-item">Authors</a></li>
 												</ul>
@@ -155,7 +156,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item active">Voulme 1(2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Voulme 1(2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -208,7 +209,7 @@
 				</div>
 			</div>
 			<div class="container pb-2 pb-lg-3 pt-0" id="articleContainer">
-				<a href="/archive2025" class="btn btn-sm btn-secondary mb-1">
+				<a href="/archive" class="btn btn-sm btn-secondary mb-1">
 					<i class="bi bi-arrow-left me-1"></i> Browse All Articles
 				</a><hr class="m-0 mb-3 p-0">
 				<div class="row">
@@ -272,6 +273,10 @@
 										<button id="citeBtn" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#citationModal">
 											<i class="bi bi-quote me-1"></i> Cite This Article
 										</button>
+										<small class="text-muted text-xs mt-2"><i class="bi bi-info-circle"></i> This DOI is provided for long-term preservation and open archiving.</small>
+										<a href="https://doi.org/10.5281/zenodo.18538363" target="_blank" class="btn btn-sm btn-outline-primary"  style="white-space: normal;">
+											<img src="/images/doi_logo.svg" class="doiIcon mx-2" alt="(Zenodo)"> Archival DOI (Zenodo)
+										</a>
 									</div>
 								</div>
 							</div>
@@ -487,7 +492,9 @@
 						<div class="mb-3">
 							<label class="form-label">APA Format</label>
 							<div id="apaCitation" class="citation-box border border-opacity-10">
-																Baker, Maher Asaad 1(2025). Editorial Policies, Peer Review, and Ethical Standards of SOLAV Journal. SOLAV Journal, 3-6. https://solav.me/a/s2025781102							</div>
+								
+								Baker, Maher Asaad 1(2025). Editorial Policies, Peer Review, and Ethical Standards of SOLAV Journal. SOLAV Journal, 3-6. https://solav.me/a/s2025781102
+							</div>
 						</div>
 					</div>
 					<div class="modal-footer">
