--- a/a/s2025781112.html
+++ b/a/s2025781112.html
@@ -30,7 +30,8 @@
 		<meta name="citation_keywords" content="Hallucination Mitigation"/>
 		<meta name="citation_keywords" content="Parameter-Efficient Fine-Tuning (PEFT)"/>
 		<meta name="citation_keywords" content="Low-Rank Adaptation (LoRA)"/>
-		<meta name="citation_keywords" content="Contrastive Learning; Reliable AI"/>
+		<meta name="citation_keywords" content="Contrastive Learning"/>
+		<meta name="citation_keywords" content="Reliable AI"/>
 		<meta name="citation_keywords" content="Edge Computing"/>
 		<meta name="citation_pdf_url" content="https://solav.me/p/s2025781112.pdf"/>
 		<meta name="citation_reference" content="T. Brown, B. Mann, N. Ryder, et al., &quot;Language Models are Few-Shot Learners,&quot; Advances in Neural Information Processing Systems (NeurIPS), vol. 33, pp. 1877–1901, 2020."/>
@@ -94,7 +95,8 @@
 		<meta name="DC.Subject" xml:lang="en" content="Hallucination Mitigation"/>
 		<meta name="DC.Subject" xml:lang="en" content="Parameter-Efficient Fine-Tuning (PEFT)"/>
 		<meta name="DC.Subject" xml:lang="en" content="Low-Rank Adaptation (LoRA)"/>
-		<meta name="DC.Subject" xml:lang="en" content="Contrastive Learning; Reliable AI"/>
+		<meta name="DC.Subject" xml:lang="en" content="Contrastive Learning"/>
+		<meta name="DC.Subject" xml:lang="en" content="Reliable AI"/>
 		<meta name="DC.Subject" xml:lang="en" content="Edge Computing"/>
 		<meta name="DC.Title" content="Mitigating Hallucination in Small Language Models via Contrastive Chain-of-Thought Fine-Tuning"/>
 		<meta name="DC.Type" content="Text.Serial.Journal"/>
@@ -113,6 +115,7 @@
 		<meta name="DC.subject" content="Small Language Models (SLMs); Chain-of-Thought Reasoning; Hallucination Mitigation; Parameter-Efficient Fine-Tuning (PEFT); Low-Rank Adaptation (LoRA); Contrastive Learning; Reliable AI; Edge Computing">
 		<meta name="DC.identifier" content="s2025781112">
 		<meta name="DC.type" content="Text.Serial.Journal">
+		<meta name="DC.relation" content="IsArchivedAt https://doi.org/10.5281/zenodo.18538736">
 		<meta property="og:type" content="article">
 		<meta property="og:title" content="Mitigating Hallucination in Small Language Models via Contrastive Chain-of-Thought Fine-Tuning">
 		<meta property="og:url" content="https://solav.me/a/s2025781112">
@@ -121,7 +124,7 @@
 		<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 		<link href="/css/swiper.css" rel="stylesheet">
-		<link href="/css/style.css?20260209" rel="stylesheet">
+		<link href="/css/style.css?20260209.1" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RE3FS524EK"></script>
 		<script>
@@ -132,7 +135,7 @@
 		gtag('config', 'G-RE3FS524EK');
 		!function(){const e=localStorage.getItem("theme"),t=window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light",a=e||t;document.documentElement.setAttribute("data-bs-theme",a)}();
 		</script>
-		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		<script type="application/ld+json">
@@ -186,7 +189,7 @@
 										<div class="d-lg-flex pt-lg-1">
 											<div class="mega-dropdown-column px-0">
 												<ul class="list-unstyled mb-3">
-													<li><a href="/archive" class="dropdown-item">Volume 2(2026)</a></li>
+													<li><a href="/archive" class="dropdown-item active">Volume 2(2026)</a></li>
 													<li><hr class="dropdown-divider"></li>
 													<li><a href="/authors" class="dropdown-item">Authors</a></li>
 												</ul>
@@ -195,7 +198,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item active">Voulme 1(2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Voulme 1(2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -248,7 +251,7 @@
 				</div>
 			</div>
 			<div class="container pb-2 pb-lg-3 pt-0" id="articleContainer">
-				<a href="/archive2025" class="btn btn-sm btn-secondary mb-1">
+				<a href="/archive" class="btn btn-sm btn-secondary mb-1">
 					<i class="bi bi-arrow-left me-1"></i> Browse All Articles
 				</a><hr class="m-0 mb-3 p-0">
 				<div class="row">
@@ -296,7 +299,8 @@
 							<span class="badge bg-light text-dark border me-2 mb-2">Hallucination Mitigation</span>
 							<span class="badge bg-light text-dark border me-2 mb-2">Parameter-Efficient Fine-Tuning (PEFT)</span>
 							<span class="badge bg-light text-dark border me-2 mb-2">Low-Rank Adaptation (LoRA)</span>
-							<span class="badge bg-light text-dark border me-2 mb-2">Contrastive Learning; Reliable AI</span>
+							<span class="badge bg-light text-dark border me-2 mb-2">Contrastive Learning</span>
+							<span class="badge bg-light text-dark border me-2 mb-2">Reliable AI</span>
 							<span class="badge bg-light text-dark border me-2 mb-2">Edge Computing</span>
 							
 						</div>
@@ -321,6 +325,10 @@
 										<button id="citeBtn" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#citationModal">
 											<i class="bi bi-quote me-1"></i> Cite This Article
 										</button>
+										<small class="text-muted text-xs mt-2"><i class="bi bi-info-circle"></i> This DOI is provided for long-term preservation and open archiving.</small>
+										<a href="https://doi.org/10.5281/zenodo.18538736" target="_blank" class="btn btn-sm btn-outline-primary"  style="white-space: normal;">
+											<img src="/images/doi_logo.svg" class="doiIcon mx-2" alt="(Zenodo)"> Archival DOI (Zenodo)
+										</a>
 									</div>
 								</div>
 							</div>
@@ -536,7 +544,9 @@
 						<div class="mb-3">
 							<label class="form-label">APA Format</label>
 							<div id="apaCitation" class="citation-box border border-opacity-10">
-																Baker, Maher Asaad; Al-Qrize, Fuad 1(2025). Mitigating Hallucination in Small Language Models via Contrastive Chain-of-Thought Fine-Tuning. SOLAV Journal, 33-53. https://solav.me/a/s2025781112							</div>
+								
+								Baker, Maher Asaad; Al-Qrize, Fuad 1(2025). Mitigating Hallucination in Small Language Models via Contrastive Chain-of-Thought Fine-Tuning. SOLAV Journal, 33-53. https://solav.me/a/s2025781112
+							</div>
 						</div>
 					</div>
 					<div class="modal-footer">
