--- a/a/s2026781201.html
+++ b/a/s2026781201.html
@@ -464,6 +464,8 @@
 					<div class="col-md-6 text-md-end order-md-2 px-2">
 						<div class="row mb-0 h-100 d-flex align-items-end justify-content-lg-end px-3">
 							<div class="col-12 p-0 m-0">
+								<a href="https://zenodo.org/communities/solav" alt="Zenodo">
+									<img src="/images/zenodo-icon-blue.svg" class="d-Icons" alt="Zenodo"></a>
 								<a href="https://bsky.app/profile/solav.me" alt="Bluesky">
 									<img src="/images/bluesky-icon.svg" class="d-Icons" alt="Bluesky"></a>
 								<a rel="me" href="https://mastodon.social/@SOLAVjournal" alt="Mastodon">
