--- a/archiving.html
+++ b/archiving.html
@@ -204,6 +204,15 @@
 							<h2 class="h1 mb-4">Digital Preservation Strategy</h2>
 							
 							<div class="row g-4">
+								<div class="col-md-12 col-lg-12">
+									<div class="card h-100 bg-light shadow-lg rounded-3 border border-opacity-10">
+										<div class="card-body text-center p-4">
+											<p class="mb-0">SOLAV Journal articles are preserved in <a href="https://zenodo.org/communities/solav" alt="Zenodo">
+									<img src="/images/zenodo-icon-blue.svg" class="d-Icons" alt="Zenodo">Zenodo</a> and assigned persistent DOIs via <a href="https://commons.datacite.org/doi.org?query=SOLAV+Journal" alt="DataCite">
+									<img src="/images/datacite-logo.svg" class="d-Icons" alt="DataCite.">DataCite</a>.</p>
+										</div>
+									</div>
+								</div>
 								<div class="col-md-6 col-lg-4">
 									<div class="card h-100 bg-light shadow-lg rounded-3 border border-opacity-10">
 										<div class="card-body text-center p-4">
@@ -590,6 +599,8 @@
 							<div class="col-12 p-0 m-0">
 								<a href="https://zenodo.org/communities/solav" alt="Zenodo">
 									<img src="/images/zenodo-icon-blue.svg" class="d-Icons" alt="Zenodo"></a>
+								<a href="https://commons.datacite.org/doi.org?query=SOLAV+Journal" alt="SOLAV articles are preserved in Zenodo and assigned persistent DOIs via DataCite.">
+									<img src="/images/datacite-logo.svg" class="d-Icons" alt="SOLAV articles are preserved in Zenodo and assigned persistent DOIs via DataCite."></a>
 								<a href="https://bsky.app/profile/solav.me" alt="Bluesky">
 									<img src="/images/bluesky-icon.svg" class="d-Icons" alt="Bluesky"></a>
 								<a rel="me" href="https://mastodon.social/@SOLAVjournal" alt="Mastodon">
