--- a/guidelines.html
+++ b/guidelines.html
@@ -719,6 +719,8 @@ Virtanen, P., et al. (2020). SciPy 1.0: Fundamental algorithms for scientific co
 							<div class="col-12 p-0 m-0">
 								<a href="https://zenodo.org/communities/solav" alt="Zenodo">
 									<img src="/images/zenodo-icon-blue.svg" class="d-Icons" alt="Zenodo"></a>
+								<a href="https://commons.datacite.org/doi.org?query=SOLAV+Journal" alt="SOLAV articles are preserved in Zenodo and assigned persistent DOIs via DataCite.">
+									<img src="/images/datacite-logo.svg" class="d-Icons" alt="SOLAV articles are preserved in Zenodo and assigned persistent DOIs via DataCite."></a>
 								<a href="https://bsky.app/profile/solav.me" alt="Bluesky">
 									<img src="/images/bluesky-icon.svg" class="d-Icons" alt="Bluesky"></a>
 								<a rel="me" href="https://mastodon.social/@SOLAVjournal" alt="Mastodon">
