--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
 		gtag('config', 'G-RE3FS524EK');
 		!function(){const e=localStorage.getItem("theme"),t=window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light",a=e||t;document.documentElement.setAttribute("data-bs-theme",a)}();
 		</script>
+		<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "Periodical",
+			"name": "SOLAV Journal",
+			"url": "https://solav.me",
+			"publisher": {
+				"@type": "Organization",
+				"name": "Leothar Company"
+			},
+			"sameAs": [
+				"https://zenodo.org/communities/solav",
+				"https://commons.datacite.org/doi.org?query=SOLAV+Journal",
+				"https://explore.openaire.eu/search/find?fv0=solav%20journal&f0=q"
+			]
+		}
+		</script>
 	</head>
 	<body>
 		<main class="page-wrapper" id="top">
@@ -375,7 +392,7 @@
 										Enhanced Research Visibility
 									</h2>
 									<ul class="mb-0">
-										<li class="mb-2">Indexing in major academic databases</li>
+										<li class="mb-2">Discovery through international research infrastructures</li>
 										<li class="mb-2">OAI-PMH compliance for repository harvesting</li>
 										<li>Full-text indexing by major search engines</li>
 									</ul>
@@ -395,7 +412,7 @@
 									<ul class="mb-0">
 										<li class="mb-2">Permanent ID and landing page</li>
 										<li class="mb-2">Multiple redundant backups and version control</li>
-										<li>10+ years guaranteed digital preservation</li>
+										<li>25+ years guaranteed digital preservation</li>
 									</ul>
 								</div>
 							</a>
