--- a/a/s2025781116.html
+++ b/a/s2025781116.html
@@ -145,7 +145,25 @@
 				"@type": "Organization",
 				"name": "SOLAV Journal"
 			},
-			"sameAs": "https://solav.me/a/s2025781116"
+			"sameAs": "https://solav.me/a/s2025781116",
+						"https://doi.org/10.5281/zenodo.18539073"
+		}
+		</script>
+		<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "Periodical",
+			"name": "SOLAV Journal",
+			"url": "https://solav.me",
+			"publisher": {
+				"@type": "Organization",
+				"name": "Leothar Company"
+			},
+			"sameAs": [
+				"https://zenodo.org/communities/solav",
+				"https://commons.datacite.org/doi.org?query=SOLAV+Journal",
+				"https://explore.openaire.eu/search/find?fv0=solav%20journal&f0=q"
+			]
 		}
 		</script>
 	</head>
