--- a/about.html
+++ b/about.html
@@ -39,6 +39,23 @@
 		gtag('config', 'G-RE3FS524EK');
 		!function(){const e=localStorage.getItem("theme"),t=window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light",a=e||t;document.documentElement.setAttribute("data-bs-theme",a)}();
 		</script>
+		<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "Periodical",
+			"name": "SOLAV Journal",
+			"url": "https://solav.me",
+			"publisher": {
+				"@type": "Organization",
+				"name": "Leothar Company"
+			},
+			"sameAs": [
+				"https://zenodo.org/communities/solav",
+				"https://commons.datacite.org/doi.org?query=SOLAV+Journal",
+				"https://explore.openaire.eu/search/find?fv0=solav%20journal&f0=q"
+			]
+		}
+		</script>
 	</head>
 	<body>
 		<main class="page-wrapper">
@@ -620,7 +637,7 @@
 						<div class="col-md-6 col-lg-3">
 							<div class="card border-0 bg-light text-center py-4">
 								<div class="card-body">
-									<div class="display-4 fw-bold mb-2 text-primary">10+</div>
+									<div class="display-4 fw-bold mb-2 text-primary">25+</div>
 									<p class="mb-0">Years Archiving Guarantee</p>
 								</div>
 							</div>
