--- a/archive2025.html
+++ b/archive2025.html
@@ -42,6 +42,23 @@
 		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
+		<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "Periodical",
+			"name": "SOLAV Journal",
+			"url": "https://solav.me",
+			"publisher": {
+				"@type": "Organization",
+				"name": "Leothar Company"
+			},
+			"sameAs": [
+				"https://zenodo.org/communities/solav",
+				"https://commons.datacite.org/doi.org?query=SOLAV+Journal",
+				"https://explore.openaire.eu/search/find?fv0=solav%20journal&f0=q"
+			]
+		}
+		</script>
 	</head>
 	<body>
 		<main class="page-wrapper">
