--- a/archiving.html
+++ b/archiving.html
@@ -455,35 +455,81 @@
 						</section>
 
 						<section class="mb-5">
-							<h2 class="h1 mb-4">Technical Information</h2>
-							
+							<h2 class="h1 mb-4">Technical Standards & Infrastructure</h2>
+
 							<div class="card bg-light shadow-lg rounded-3 border border-opacity-10">
 								<div class="card-body p-4">
-									<div class="row">
+
+									<div class="row g-4">
+
 										<div class="col-md-6">
-											<h5 class="mb-3"><i class="bi bi-gear text-primary me-2"></i>Platform & Infrastructure</h5>
-											<ul class="mb-3 mb-md-0">
-												<li><strong>Hosting:</strong> Secure cloud infrastructure with 99.9% uptime SLA</li>
-												<li><strong>Security:</strong> SSL encryption, regular security audits</li>
-												<li><strong>Backups:</strong> Daily incremental + weekly full backups</li>
-												<li><strong>Monitoring:</strong> 24/7 system health monitoring</li>
-											</ul>
-										</div>
-										<div class="col-md-6">
-											<h5 class="mb-3"><i class="bi bi-filetype-html text-primary me-2"></i>Technical Standards</h5>
+											<h5 class="mb-3">
+												<i class="bi bi-gear text-primary me-2"></i>
+												Platform & Infrastructure
+											</h5>
+
 											<ul class="mb-0">
-												<li><strong>HTML5:</strong> Accessible, semantic markup</li>
-												<li><strong>PDF/A:</strong> ISO-standard archival format</li>
-												<li><strong>Metadata:</strong> Dublin Core, Open Graph, Schema.org</li>
-												<li><strong>APIs:</strong> <a href="/oai-pmh">OAI-PMH</a> for metadata harvesting</li>
+												<li><strong>Hosting:</strong> Secure cloud infrastructure with monitored uptime</li>
+												<li><strong>Security:</strong> SSL/TLS encryption and routine security reviews</li>
+												<li><strong>Backups:</strong> Daily incremental, weekly full, and quarterly archival backups</li>
+												<li><strong>Monitoring:</strong> Continuous system health and accessibility monitoring</li>
+												<li><strong>Redundancy:</strong> Redundant storage and mirrored backups</li>
 											</ul>
 										</div>
+
+										<div class="col-md-6">
+											<h5 class="mb-3">
+												<i class="bi bi-file-earmark-text text-primary me-2"></i>
+												Technical Standards
+											</h5>
+
+											<ul class="mb-0">
+												<li><strong>Formats:</strong> PDF/A (archival), structured HTML, metadata XML</li>
+												<li><strong>Metadata:</strong> Dublin Core, Open Graph, Schema.org, Highwire Press</li>
+												<li><strong>APIs:</strong> <a href="/oai-pmh">OAI-PMH</a> for metadata harvesting</li>
+												<li><strong>Accessibility:</strong> Designed to support screen readers and accessibility best practices</li>
+												<li><strong>DOI Service:</strong> DataCite (via Zenodo)</li>
+											</ul>
+										</div>
+
 									</div>
-									
+
+									<div class="row mt-4 g-4">
+										<div class="col-md-12">
+
+											<h5 class="mb-3">
+												<i class="bi bi-shield-check text-primary me-2"></i>
+												Digital Preservation Standards
+											</h5>
+
+											<p class="small mb-0">
+												Our preservation approach is informed by established digital curation standards including:
+											</p>
+
+											<div class="d-flex flex-wrap gap-2 mt-2">
+												<span class="badge bg-primary-subtle text-primary rounded-pill">OAIS Reference Model</span>
+												<span class="badge bg-primary-subtle text-primary rounded-pill">Data Seal of Approval</span>
+												<span class="badge bg-primary-subtle text-primary rounded-pill">TRAC Checklist</span>
+												<span class="badge bg-primary-subtle text-primary rounded-pill">ISO 14721</span>
+											</div>
+
+										</div>
+									</div>
+
 									<div class="alert alert-warning mt-4" role="alert">
-										<h5 class="alert-heading"><i class="bi bi-download me-2"></i>Offline Access</h5>
-										<p class="mb-0">Complete journal issues are available as downloadable PDF packages. Annual compilations are provided for library archiving and offline reference. Contact <a href="mailto:admin@solav.me" class="alert-link">admin@solav.me</a> for institutional archiving arrangements.</p>
+
+										<h5 class="alert-heading">
+											<i class="bi bi-download me-2"></i>
+											Offline & Institutional Access
+										</h5>
+
+										<p class="mb-0">
+											Complete journal volumes are available as downloadable PDF packages. Libraries and institutions may request archival copies or establish automated harvesting via our OAI-PMH endpoint.
+											Contact <a href="mailto:admin@solav.me" class="alert-link">admin@solav.me</a>.
+										</p>
+
 									</div>
+
 								</div>
 							</div>
 						</section>
